--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "krugleshock",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,7 +13,8 @@
     "next": "14.2.4",
     "next-intl": "^3.15.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
