--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
     "next": "14.2.4",
     "next-intl": "^3.15.0",
