--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "krugleshock",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,7 +11,7 @@
   "dependencies": {
     "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
-    "next": "14.2.4",
+    "next": "^14.2.21",
     "next-intl": "^3.15.0",
     "react": "^18",
     "react-dom": "^18",
